@@ -1,5 +1,7 @@
 02.feb (lv)
       - MusicXML import fixes: direction placement (not complete yet)
+       (la)
+      - improve MusicXML import of clefs
 01.feb (la)
       - fix #9002: Reset Position doesn't affect tuplet bracket
 30.jan (lv)
